Tests/features/Templates/pass/test_template_class_const_member_decl.cpp
// EXPECT_EXIT: 0

template<typename T>
class X
{
public:
  int empty() const;
  int a;
};

int main(void)
{
  X<int> x;
  x.a = 7;
  return x.a == 7 ? 0 : 1;
}
