Tests/features/Templates/fail/test_reject_missing_explicit_instantiation.cpp
// EXPECT_COMPILE_FAIL: 1

template(T)
T twice(T v)
{
  return v + v;
}

int main(void)
{
  return twice(7);
}
